[package]
name = "neat-commits"
version = "1.0.0"
edition = "2024"

authors = ["Biqydu"]
description = "A clean and user-friendly helper for writing Conventional Commits"
license = "MIT OR Apache-2.0"
keywords = ["cli", "git", "conventional-commits", "commit", "productivity"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/biqydu/neat-commits"
homepage = "https://github.com/biqydu/neat-commits"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "neat"
path = "src/main.rs"